bug fixes on mobile layout

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -8,18 +8,17 @@ body {
   height: 100%;
 }
 
-body {
+ body {
   background-color: #dedee2;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   font-family: "Inter", sans-serif;
+  padding: .5em;
 }
 
 .quiz-container {
-  margin: 0;
+  margin: 1.5em auto;
   padding: 3em;
   width: 550px;
+  border-radius: 10px;
   min-height: 550px;
   background: #f5f7fb;
   border-radius: 10px;
@@ -28,36 +27,13 @@ body {
   align-items: center;
   justify-content: center;
   text-align: center;
-  position: relative;
-  overflow: hidden;
 }
 
-.decor {
-  position: absolute;
-  z-index: 0;
-  display: none;
-}
-
-.decor-upper-right {
-  fill: rgb(250, 247, 203);
-  width: 300px;
-  top: -140px;
-  right: -140px;
-  transform: rotate(310deg);
-}
-
-.decor-lower-left {
-  fill: rgb(201, 228, 247);
-  width: 300px;
-  bottom: -150px;
-  left: -100px;
-  transform: rotate(25deg);
-}
 
 .welcome-container h1 {
   color: #4d5b9e;
   margin: 0;
-  font-size: 2rem;
+  font-size: 2.5rem;
 }
 
 .welcome-container p {
@@ -77,13 +53,13 @@ body {
   border: none;
   border-radius: 7px;
   cursor: pointer;
-}
+} 
 
 .category-btn {
   padding: 0.75em 3em;
   margin: 0.5em;
   font-size: 1rem;
-}
+} 
 
 .new-ctg-btn {
   margin-left: 5px;
@@ -95,15 +71,10 @@ body {
   padding: 0.5em 2em
 }
 
-.all-questions {
-  z-index: 100;
-}
-
 .question-container {
   margin: 0 auto;
   text-align: left;
   color: #293264;
-  z-index: 100;
 }
 
 .question-container h3 {
@@ -143,7 +114,7 @@ span {
   font-size: 12;
   font-weight: 700;
   padding-right: 15px;
-}
+} 
 
 @media (max-width: 450px) {
 
@@ -153,9 +124,10 @@ span {
     width: 100%;
   }
   .quiz-container {
-    width: 100%;
-    height: 95vh;
+    width: 95%;
+    min-height: 97vh;
     margin: 0 auto;
+    padding: 1em;
   }
 
   .btn {
@@ -163,7 +135,7 @@ span {
   }
 
   .category-btn {
-    padding: 7px 15px;
+    padding: 7% 15%;
     width: 100%;
   }
 
@@ -179,7 +151,7 @@ span {
   }
 
   .welcome-container {
-    padding: 3em;
+    padding: 5em;
     width: 100%
   }
 
@@ -195,12 +167,7 @@ span {
     margin: 0 auto;
     text-align: left;
     color: #293264;
-    z-index: 100;
-    width: 100%
-  }
-  .game-container {
-    height: 95%;
-    width: 100%
+    width: 100%;
   }
 
   .all-questions {
@@ -212,7 +179,7 @@ span {
   }
 
   .question-container h3 {
-    font-size: 0.75rem;
+    font-size: 1.2rem;
     margin-bottom: 1em;
     line-height: 1.3;
   }
@@ -229,17 +196,16 @@ span {
   }
 
   .answer-container div {
-    font-size: 0.5rem;
-    color: #293264;
+    font-size: 0.75rem;
     border: 0.5px solid #4d5b9e;
     margin-right: 6px;
-    padding: 2px 7px;
+    padding: 3px 9px;
     border-radius: 10px;
-    cursor: pointer;
   }
 
   .result-container {
-    padding: 0;
+    margin-top: 1em;
+    padding: 0 auto;
   }
   
   span {
